fix(tab-bar): give badges of inactive tabs a better contrast

--- a/src/components/tab-bar/tab-bar.scss
+++ b/src/components/tab-bar/tab-bar.scss
@@ -58,6 +58,8 @@ $tab-scroller-fade-width: 65;
     flex: 0 0 auto;
 
     &:not(.mdc-tab--active) {
+        --badge-background-color: rgb(var(--contrast-600));
+
         &:after {
             content: '';
             display: block;
